[package]
name = "xrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
anyhow = "1.0.93"
actix-cors = "0.7.0"
actix-web = "4.9.0"
clap = { version = "4.5.21", features = ["derive", "env"] }
thiserror = "2.0.9"
tracing-actix-web = { version = "0.7.15", features = ["opentelemetry_0_27"] }
valuable = { version = "0.1.1", features = ["derive"] }
liblog = { version = "0.1.0", path = "../lib/liblog" }
libshared = { version = "0.1.0", path = "../lib/libshared" }
libmq = { version = "0.1.0", path = "../lib/libmq" }
libtran = { version = "0.1.0", path = "../lib/libtran" }
futures-util = "0.3.31"
