[package]
name = "liblog"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
